--- a/www/index.html
+++ b/www/index.html
@@ -70,7 +70,7 @@
 						<!-- end navigation -->
 
 						<!-- sign in -->
-						<a id= "headerButton" href="#signin" class="header__signin modal-btn"><span>Tech Demo</span></a>
+						<a href="./documents/whitepaper2.pdf" target="_blank" class="home__btn"><span>whitepaper</span></a>
 						<!-- end sign in -->
 					</div>
 				</div>
@@ -79,8 +79,8 @@
 	</header>
 	<!-- end header -->
 	<div id="hero">
-		<video autoplay muted poster>
-			<source src="./videos/websiteIntroh264.mp4" type="video/mp4">
+		<video id="videoID" controls="1" autoplay muted playsinline poster="/videos/iphonePosterJ.jpg">
+			<source src="./videos/websiteIntroOfiicial.mp4" type="video/mp4">
 		</video>
 		<div id="home" class="content d-flex align-items-center">
 
@@ -97,7 +97,7 @@
 			<div class="row">
 				<!-- section title -->
 				<div class="col-12">
-					<h2 class="section__title section__title--white section__title--margin">What is GamXChange?</h2>
+					<h2 class="section__title section__title--white section__title--margin">What is GoodGains?</h2>
 				</div>
 				<!-- end section title -->
 
@@ -1110,22 +1110,29 @@
 		<span class="modal__text">We will send a password to your Email</span>
 	</div>
 	<!-- end forgot -->
-
 	<!-- JS -->
 	<script type="text/javascript">
 		window.addEventListener('load', function () {
+			if (window.innerWidth <= 500) {
+				const videoElement = document.getElementById("videoID");
+				videoElement.remove();
+				document.getElementById('hero').innerHTML += '<img id="iphoneHomeSlide"src="./videos/iphoneBackground.gif" style="width:100%; height: 100%">'
+			} else {
+			}
+		});
+		window.addEventListener('load', function () {
 			setTimeout(function() {
-				document.getElementById('home').innerHTML += '<div class="container">\n' +
-					'\t<h1 class="home__title ">Welcome to GoodGains</h1>\n' +
+				document.getElementById('home').innerHTML += '<div class="container home__content">\n' +
+					'\t<h1 class="home__title ">Welcome to</h1>\n' +
 					'\n' +
 					'\t<p class="home__text ">Next Level Investing</p>\n' +
 					'\n' +
 					'\t<div class="home__btns">\n' +
 					'\t\t<a data-scroll href="#getstarted" class="home__btn home__btn--white"><span>Get started</span></a>\n' +
-					'\t\t<a href="./documents/GGXWhitePaperNoCaps.pdf" target="_blank" class="home__btn"><span>whitepaper</span></a>\n' +
+					'\t\t<a href="./documents/whitepaper2.pdf" target="_blank" class="home__btn"><span>whitepaper</span></a>\n' +
 					'\t</div>\n' +
 					'</div>\n';
-			}, 9500)
+			}, 50000)
 		});
 	</script>
 	<script src="js/jquery-3.5.1.min.js"></script>
