added 24 hour change to coin component
adding the html for the 24 coin price change

--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,9 @@
 	<link rel="stylesheet" href="css/owl.carousel.min.css">
 	<link rel="stylesheet" href="css/magnific-popup.css">
 	<link rel="stylesheet" href="css/paymentfont.min.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<link rel="stylesheet" href="https://fonts.sandbox.google.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+	<link rel="stylesheet" href="https://fonts.sandbox.google.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 	<link rel="stylesheet" href="css/main.css">
 
 	<!-- Favicons -->
@@ -101,7 +104,7 @@
 					<div class="home__btns">
 						<a data-scroll href="#getstarted" class="home__btn home__btn--white"><span>Get started</span></a>
 					</div>
-					<h2 class="section__title section__title--white section__title--margin">P2E Market Today</h2>
+					<h2 class="section__title section__title--white section__title--margin">P2E Live Market Prices</h2>
 				</div>
 			</div>
 			<div class="row">
@@ -117,6 +120,7 @@
 									<h5 class="marketCoinText">MGOD</h5>
 								</div>
 								<div class="col-4">
+									<h5 class="marketCoin24Change"><span id="metagods24ChangeSymbol" class="material-symbols-outlined">trending_up</span><span id ="metagods24Change">-3.11</span>%</h5>
 									<h3 class="marketCoinPrice">$<span id="metagodsPrice"></span></h3>
 								</div>
 							</div>
@@ -135,6 +139,7 @@
 									<h5 class="marketCoinText">SIDUS</h5>
 								</div>
 								<div class="col-4">
+									<h5 class="marketCoin24Change"><span id="sidus24ChangeSymbol" class="material-symbols-outlined">trending_up</span><span id ="sidus24Change">-3.11</span>%</h5>
 									<h3 class="marketCoinPrice">$<span id="sidusPrice"></span></h3>
 								</div>
 							</div>
@@ -153,6 +158,7 @@
 									<h5 class="marketCoinText">ILV</h5>
 								</div>
 								<div class="col-4">
+									<h5 class="marketCoin24Change"><span id="illuvium24ChangeSymbol" class="material-symbols-outlined">trending_up</span><span id ="illuvium24Change">-3.11</span>%</h5>
 									<h3 class="marketCoinPrice">$<span id="illuviumPrice"></span></h3>
 								</div>
 							</div>
@@ -171,6 +177,7 @@
 									<h5 class="marketCoinText">FYN</h5>
 								</div>
 								<div class="col-4">
+									<h5 class="marketCoin24Change"><span id="affyn24ChangeSymbol" class="material-symbols-outlined">trending_up</span><span id ="affyn24Change">-3.11</span>%</h5>
 									<h3 class="marketCoinPrice">$<span id="affynPrice"></span></h3>
 								</div>
 							</div>
@@ -189,6 +196,7 @@
 									<h5 class="marketCoinText">SPS</h5>
 								</div>
 								<div class="col-4">
+									<h5 class="marketCoin24Change"><span id="splinterlands24ChangeSymbol" class="material-symbols-outlined">trending_up</span><span id ="splinterlands24Change">-3.11</span>%</h5>
 									<h3 class="marketCoinPrice">$<span id="splinterlandsPrice"></span></h3>
 								</div>
 							</div>
@@ -207,6 +215,7 @@
 									<h5 class="marketCoinText">ATRI</h5>
 								</div>
 								<div class="col-4">
+									<h5 class="marketCoin24Change"><span id="atari24ChangeSymbol" class="material-symbols-outlined">trending_up</span><span id ="atari24Change">-3.11</span>%</h5>
 									<h3 class="marketCoinPrice">$<span id="atariPrice"></span></h3>
 								</div>
 							</div>
